--- a/src/LBF/UserBundle/Resources/views/User/indexUser.html.twig
+++ b/src/LBF/UserBundle/Resources/views/User/indexUser.html.twig
@@ -577,7 +577,7 @@
 			                              </th>
 			                              <td class="left">
 			                              	{% if single_order.elements|length > 0 %}
-			                              		<ul class="list_no_style_li">
+			                              		<ul class="list_no_style_li item_list">
 			                              			{% for single_element in single_order.elements %}
 			                              				{% set item = single_element['item'] %}
 		                            					{% set qty = single_element['qty'] %}
