--- a/src/LBF/AdminBundle/Resources/views/Admin/indexAdmin.html.twig
+++ b/src/LBF/AdminBundle/Resources/views/Admin/indexAdmin.html.twig
@@ -3,7 +3,7 @@
 {% extends "LBFAdminBundle::admin_general.html.twig" %}
 
 {% block title %}
-  {{ parent() }} - {{ 'user.titles.profile' | trans }}
+  {{ parent() }} - Administration
 {% endblock %}
 
 {% block LBF_Admin_body %}
@@ -36,25 +36,9 @@
 		        		<div role="tabpanel">
 
 							  <!-- Nav tabs -->
-							  <div class="col-md-3 border_white_right">
+							  <div class="col-md-3 col-xs-3 border_white_right">
 								  <ul class="nav_tabs_user list_no_style_li" role="tablist">
 								    <li role="user_tabs" class="active">
-								    	<a href="#users" aria-controls="current" role="tab" data-toggle="tab" class="btn btn-choice">
-								    		Users ({{ users|length }})
-								    		<div class="float-right inner_arrow">
-												<img src="{{ asset('img/system/defaults/users.png') }}" alt="" class="btn_right_arrow"/>
-											</div>
-								    	</a>
-								    </li>
-								    <li role="user_tabs" class="">
-								    	<a href="#emails" aria-controls="current" role="tab" data-toggle="tab" class="btn btn-choice">
-								    		Newsletter emails ({{ newsletterEmails|length }})
-								    		<div class="float-right inner_arrow">
-												<img src="{{ asset('img/system/defaults/emails.png') }}" alt="" class="btn_right_arrow"/>
-											</div>
-								    	</a>
-								    </li>
-								    <li role="user_tabs" class="">
 								    	<a href="#current" aria-controls="current" role="tab" data-toggle="tab" class="btn btn-choice">
 								    		Current orders ({{ currentOrders|length }})
 								    		<div class="float-right inner_arrow">
@@ -72,6 +56,23 @@
 								    </li>
 								    <br/>
 								    <li role="user_tabs" class="">
+								    	<a href="#users" aria-controls="current" role="tab" data-toggle="tab" class="btn btn-choice">
+								    		Users ({{ users|length }})
+								    		<div class="float-right inner_arrow">
+												<img src="{{ asset('img/system/defaults/users.png') }}" alt="" class="btn_right_arrow"/>
+											</div>
+								    	</a>
+								    </li>
+								    <li role="user_tabs" class="">
+								    	<a href="#emails" aria-controls="current" role="tab" data-toggle="tab" class="btn btn-choice">
+								    		Newsletter emails ({{ newsletterEmails|length }})
+								    		<div class="float-right inner_arrow">
+												<img src="{{ asset('img/system/defaults/emails.png') }}" alt="" class="btn_right_arrow"/>
+											</div>
+								    	</a>
+								    </li>
+								    <br/>
+								    <li role="user_tabs" class="">
 								    	<a href="{{ path('fos_user_security_logout') }}" class="btn btn-choice logout-btn">
 								    		Logout
 								    		<div class="float-right inner_arrow">
@@ -83,8 +84,164 @@
 							  </div>
 
 						  	<!-- Tab panes -->
-						  	<div class="col-md-9 tab-content">
-						  		<div role="tabpanel" class="tab-pane nav active" id="users">
+						  	<div class="col-md-9 col-xs-9 tab-content">
+						  		
+						    	<div role="tabpanel" class="tab-pane nav active" id="current">
+									{% if currentOrders|length > 0 %}
+										<div class="table-responsive">
+					                      <table class="table">
+					                        <thead>
+					                          <tr>
+					                            <th class="center">
+					                              Ordre n°
+					                            </th>
+					                            <th class="left">
+					                              Eléments
+					                            </th>
+					                            <th class="center">
+					                              Créé le
+					                            </th>
+					                            <th class="center">
+					                              Livraison le
+					                            </th>
+					                            <th class="center">
+					                              Statut
+					                            </th>
+					                            <th class="center">
+					                            	Action
+					                            </th>
+					                          </tr>
+					                        </thead>
+					                        <tbody>
+					                          {% for single_order in currentOrders %}
+					                            <tr>
+					                              <th class="center">
+					                                {{ single_order.id }}
+					                              </th>
+					                              <td class="left">
+					                              	{% if single_order.elements|length > 0 %}
+					                              		<ul class="list_no_style_li item_list">
+					                              			{% for single_element in single_order.elements %}
+					                              				{% set item = single_element['item'] %}
+				                            					{% set qty = single_element['qty'] %}
+					                              				<li>
+					                              					{{ item.name }} (x{{ qty }})
+					                              				</li>
+					                              			{% endfor %}
+					                              		</ul>
+					                              	{% else %}
+					                              	{% endif %}
+					                              </td>
+					                              <td class="center">
+					                              	{{ single_order.createdAt|date("H:i d/M/Y") }}
+					                              </td>
+					                              <td class="center">
+					                              	{{ single_order.deliveryAt|date("H:i d/M/Y") }}
+					                              </td>
+					                              <td class="center">
+					                              	{% if single_order.status == 'onHold' %}
+					                              		En attente
+						                              	<img src="{{ asset('img/system/orders/onHold.png') }}" alt="" class="btn_right_arrow"/>
+					                              	{% elseif single_order.status == 'confirm' %}
+					                              		Confirmé
+					                              		<img src="{{ asset('img/system/orders/confirmed.png') }}" alt="" class="btn_right_arrow"/>
+					                              	{% elseif single_order.status == 'refused' %}
+					                              		Refusé
+					                              		<img src="{{ asset('img/system/orders/refused.png') }}" alt="" class="btn_right_arrow"/>
+					                              	{% endif %}
+					                              </td>
+					                              <td class="center">
+					                              	{% if single_order.status == 'confirm' %}
+						                              	<a href="{{ path('lbf_admin_answer_edit', {'orderId':single_order.id}) }}">
+						                              		<button class="btn btn-admin">
+							                              		<span class="glyphicon glyphicon-check" aria-hidden="true"></span>
+						                              		</button>
+						                              	</a>
+					                              	{% endif %}
+						                              	<a href="{{ path('lbf_admin_answer_edit', {'orderId':single_order.id}) }}">
+						                              		<button class="btn btn-admin">
+							                              		<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+						                              		</button>
+						                              	</a>
+					                              </td>
+					                            </tr>
+					                          {% endfor %}
+					                        </tbody>
+					                      </table>
+					                    </div>
+									{% else %}
+										<div class="center col-md-9">
+											Aucun ordre pour l'instant.
+										</div>
+										<div class="col-md-3"></div>
+									{% endif %}
+						    	</div>
+						    	<div role="tabpanel" class="tab-pane" id="past">
+						    		{% if pastOrders|length > 0 %}
+										<div class="table-responsive">
+					                      <table class="table">
+					                        <thead>
+					                          <tr>
+					                            <th class="center">
+					                              Ordre n°
+					                            </th>
+					                            <th class="left">
+					                              Eléments
+					                            </th>
+					                            <th class="center">
+					                              Créé le
+					                            </th>
+					                            <th class="center">
+					                              Livraison le
+					                            </th>
+					                            <th class="center">
+					                              Statut
+					                            </th>
+					                          </tr>
+					                        </thead>
+					                        <tbody>
+					                          {% for single_order in pastOrders %}
+					                            <tr>
+					                              <th class="center">
+					                                {{ single_order.id }}
+					                              </th>
+					                              <td class="left">
+					                              	{% if single_order.elements|length > 0 %}
+					                              		<ul class="list_no_style_li">
+					                              			{% for single_element in single_order.elements %}
+					                              				{% set item = single_element['item'] %}
+				                            					{% set qty = single_element['qty'] %}
+					                              				<li>
+					                              					{{ item.name }} (x{{ qty }})
+					                              				</li>
+					                              			{% endfor %}
+					                              		</ul>
+					                              	{% else %}
+					                              	{% endif %}
+					                              </td>
+					                              <td class="center">
+					                              	{{ single_order.createdAt }}
+					                              </td>
+					                              <td class="center">
+					                              	{{ single_order.deliveryAt|date("H:i d/M/Y") }}
+					                              </td>
+					                              <td class="center">
+					                              	Livré
+					                              </td>
+					                            </tr>
+					                          {% endfor %}
+					                        </tbody>
+					                      </table>
+					                    </div>
+									{% else %}
+										<div class="center col-md-9">
+											Aucun ordre pour l'instant.
+										</div>
+										<div class="col-md-3"></div>
+									{% endif %}
+						    	</div>
+
+						    	<div role="tabpanel" class="tab-pane" id="users">
 						    		{% if users|length > 0 %}
 										<div class="table-responsive">
 					                      <table class="table">
@@ -193,157 +350,6 @@
 										<div class="col-md-3"></div>
 									{% endif %}
 						    	</div>
-						    	<div role="tabpanel" class="tab-pane" id="current">
-									{% if currentOrders|length > 0 %}
-										<div class="table-responsive">
-					                      <table class="table">
-					                        <thead>
-					                          <tr>
-					                            <th class="center">
-					                              Ordre n°
-					                            </th>
-					                            <th class="left">
-					                              Eléments
-					                            </th>
-					                            <th class="center">
-					                              Créé le
-					                            </th>
-					                            <th class="center">
-					                              Livraison le
-					                            </th>
-					                            <th class="center">
-					                              Statut
-					                            </th>
-					                            <th class="center">
-					                            	Action
-					                            </th>
-					                          </tr>
-					                        </thead>
-					                        <tbody>
-					                          {% for single_order in currentOrders %}
-					                            <tr>
-					                              <th class="center">
-					                                {{ single_order.id }}
-					                              </th>
-					                              <td class="left">
-					                              	{% if single_order.elements|length > 0 %}
-					                              		<ul class="list_no_style_li">
-					                              			{% for single_element in single_order.elements %}
-					                              				{% set item = single_element['item'] %}
-				                            					{% set qty = single_element['qty'] %}
-					                              				<li>
-					                              					{{ item.name }} (x{{ qty }})
-					                              				</li>
-					                              			{% endfor %}
-					                              		</ul>
-					                              	{% else %}
-					                              	{% endif %}
-					                              </td>
-					                              <td class="center">
-					                              	{{ single_order.createdAt }}
-					                              </td>
-					                              <td class="center">
-					                              	{{ single_order.deliveryAt|date("H:i d/M/Y") }}
-					                              </td>
-					                              <td class="center">
-					                              	{% if single_order.status == 'onHold' %}
-					                              		En attente
-						                              	<img src="{{ asset('img/system/orders/onHold.png') }}" alt="" class="btn_right_arrow"/>
-					                              	{% elseif single_order.status == 'confirm' %}
-					                              		Confirmé
-					                              		<img src="{{ asset('img/system/orders/confirmed.png') }}" alt="" class="btn_right_arrow"/>
-					                              	{% elseif single_order.status == 'refused' %}
-					                              		Refusé
-					                              		<img src="{{ asset('img/system/orders/refused.png') }}" alt="" class="btn_right_arrow"/>
-					                              	{% endif %}
-					                              </td>
-					                              <td>
-					                              	<a href="#">
-						                              	<img src="{{ asset('img/system/orders/confirmed.png') }}" alt="" class="btn_right_arrow"/>
-					                              	</a>
-					                              	<a href="#">
-						                              	<img src="{{ asset('img/system/orders/refused.png') }}" alt="" class="btn_right_arrow"/>
-					                              	</a>
-					                              </td>
-					                            </tr>
-					                          {% endfor %}
-					                        </tbody>
-					                      </table>
-					                    </div>
-									{% else %}
-										<div class="center col-md-9">
-											Aucun ordre pour l'instant.
-										</div>
-										<div class="col-md-3"></div>
-									{% endif %}
-						    	</div>
-						    	<div role="tabpanel" class="tab-pane" id="past">
-						    		{% if pastOrders|length > 0 %}
-										<div class="table-responsive">
-					                      <table class="table">
-					                        <thead>
-					                          <tr>
-					                            <th class="center">
-					                              Ordre n°
-					                            </th>
-					                            <th class="left">
-					                              Eléments
-					                            </th>
-					                            <th class="center">
-					                              Créé le
-					                            </th>
-					                            <th class="center">
-					                              Livraison le
-					                            </th>
-					                            <th class="center">
-					                              Statut
-					                            </th>
-					                          </tr>
-					                        </thead>
-					                        <tbody>
-					                          {% for single_order in pastOrders %}
-					                            <tr>
-					                              <th class="center">
-					                                {{ single_order.id }}
-					                              </th>
-					                              <td class="left">
-					                              	{% if single_order.elements|length > 0 %}
-					                              		<ul class="list_no_style_li">
-					                              			{% for single_element in single_order.elements %}
-					                              				{% set item = single_element['item'] %}
-				                            					{% set qty = single_element['qty'] %}
-					                              				<li>
-					                              					{{ item.name }} (x{{ qty }})
-					                              				</li>
-					                              			{% endfor %}
-					                              		</ul>
-					                              	{% else %}
-					                              	{% endif %}
-					                              </td>
-					                              <td class="center">
-					                              	{{ single_order.createdAt }}
-					                              </td>
-					                              <td class="center">
-					                              	{{ single_order.deliveryAt|date("H:i d/M/Y") }}
-					                              </td>
-					                              <td class="center">
-					                              	Livré
-					                              </td>
-					                            </tr>
-					                          {% endfor %}
-					                        </tbody>
-					                      </table>
-					                    </div>
-									{% else %}
-										<div class="center col-md-9">
-											Aucun ordre pour l'instant.
-										</div>
-										<div class="col-md-3"></div>
-									{% endif %}
-						    	</div>
-						    	<div role="tabpanel" class="tab-pane" id="logout">
-									
-						    	</div>
 						    	
 						  	</div>
 
@@ -355,16 +361,8 @@
 		        	{% endif %}
 
 			</div>
-
-			<!-- BEGIN FOOTER -->
-              {% include 'includes/footer.html.twig' %}
-            <!-- END FOOTER -->
 		</div>
 	</div>
 	<!-- END CONTENT -->
-
-	<!-- BEGIN rightbar -->
-      {% include 'includes/footer.html.twig' %}
-    <!-- END rightbar -->
 
 {% endblock LBF_Admin_body %}
