--- a/web/css/main_style.css
+++ b/web/css/main_style.css
@@ -463,7 +463,7 @@ strong {
 
 #social_media {	
 	position:fixed;
-	background: rgba(250,250,250,0.96);
+	background: rgba(100,100,100,0.88); ;/*rgba(250,250,250,0.96);*/
 	top: 40%;
 	left:0;
 	border: 1px solid rgba(50,50,50,0.2);
@@ -1071,6 +1071,38 @@ a.captionOrange:hover
     transform:scale(1) rotate(0);
     opacity:1;
 }
+
+.item_list {
+	padding: 0;
+	margin: 0;
+}
+
+
+
+/* ------------------------------------------------------ Admin ------------------------------------------------------ */
+.btn-admin, .btn-admin:focus {
+	margin:0;
+	color: white;
+	background-color: transparent;
+	/*border: 1px solid white;*/
+	border-radius: 0;
+	border-bottom: 1.5px solid transparent;
+	font-size: 1.1em;
+}
+.btn-admin:hover {
+	/*background-color: rgba(0,0,0,0.5);*/
+	color: white;
+	border-bottom: 1.5px solid white;
+}
+
+.sep_order_admin {
+	width: 200px;
+	margin: auto;
+	margin-bottom: 4px;
+	border-bottom: 1px dotted white;
+}
+
+
 
 /* ------------------------------------------------------ Footer ------------------------------------------------------ */
 .footer
